--- a/Common/Style/variables.less
+++ b/Common/Style/variables.less
@@ -20,7 +20,7 @@
 @font-family-serif: "CorporateSDemi", Georgia, "Times New Roman", Times, serif;
 @font-family-monospace: "CorporateSDemi", Menlo, Monaco, Consolas, "Courier New", monospace;
 @font-family-base: @font-family-sans-serif;
-@font-size-base: 16px;
+@font-size-base: 15px;
 @font-size-large: ceil((@font-size-base * 1.25));
 @font-size-small: ceil((@font-size-base * 0.85));
 @font-size-h1: floor((@font-size-base * 2.6));
@@ -56,9 +56,9 @@
 @caret-width-base: 4px;
 @caret-width-large: 5px;
 @table-cell-padding: 8px;
-@table-condensed-cell-padding: 5px;
+@table-condensed-cell-padding: 6px;
 @table-bg: #ffffff;
-@table-bg-accent: #ffffff;
+@table-bg-accent: #eeeeee;
 @table-bg-hover: #f5f5f5;
 @table-bg-active: @table-bg-hover;
 @table-border-color: #ddd;
@@ -319,10 +319,10 @@
 @panel-heading-padding: 10px 15px;
 @panel-footer-padding: @panel-heading-padding;
 @panel-border-radius: @border-radius-base;
-@panel-inner-border: #333333;
+@panel-inner-border: #666666;
 @panel-footer-bg: #ececec;
 @panel-default-text: @gray-lighter;
-@panel-default-border: #333333;
+@panel-default-border: #999999;
 @panel-default-heading-bg: #333333;
 @panel-primary-text: #fff;
 @panel-primary-border: @brand-primary;
