--- a/Common/Style/NavBar.Correction.css
+++ b/Common/Style/NavBar.Correction.css
@@ -2,7 +2,7 @@
     height: 110px;
     background-image: url(/Common/Style/Resource/MB-Logo-2016-2.gif);
     background-repeat: no-repeat;
-    background-position: center left;
+    background-position: 15px center;
 }
 
 .navbar.navbar-service {
@@ -23,6 +23,33 @@
     color: #666;
     height: 25px;
 }
+.navbar.navbar-application > ul > li > a span {
+    margin-bottom: 3px;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    color: #666;
+    height: 18px;
+}
+.navbar.navbar-application > ul > li {
+    min-width: 120px;
+    text-align: center;
+    border-right: 1px solid #333333;
+}
+.navbar.navbar-module > ul > li > a span {
+    margin-bottom: 3px;
+    font-size: 20px;
+    display: block;
+    text-align: center;
+    color: #666;
+    height: 18px;
+}
+.navbar.navbar-module > ul > li {
+    min-width: 160px;
+    text-align: center;
+    border-right: 1px solid #222222;
+}
+
 .navbar.navbar-application {
     background: #222222;
 }
