--- a/Common/Frontend/Table/Structure/TableContainer.twig
+++ b/Common/Frontend/Table/Structure/TableContainer.twig
@@ -1,7 +1,7 @@
 {% if( TableTitle is not empty ) %}
     {{ TableTitle }}
 {% endif %}
-<table id="{{ Hash }}" class="table table-bordered table-condensed table-striped">
+<table class="table table-bordered table-condensed table-striped">
     <thead>
     {% for TableHead in HeadList %}
         {% for TableRow in TableHead.getTableRow %}
@@ -56,13 +56,3 @@
         {% endfor %}
     {% endif %}
 </table>
-<script>
-    //noinspection JSUnresolvedFunction
-    executeScript(function()
-    {
-        Client.Use('ModTable', function()
-        {
-            jQuery('table#{{ Hash }}').ModTable({{ InteractiveOption }});
-        });
-    });
-</script>
