Improve Slick Test

--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -238,7 +238,7 @@
 
     executeScript(function () {
         Client.Use('ModAlways', function () {
-            jQuery('div.FadeIn').fadeIn('fast');
+            jQuery('div.FadeIn').css('visibility','visible').hide().fadeIn('fast');
             jQuery().ModAlways();
 
             var DataToggleCollapse = jQuery('[data-toggle="collapse"]');
