--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -46,6 +46,11 @@
 
                     <nav class="navbar navbar-default navbar-service small">
                         <ul class="nav navbar-nav navbar-right">
+                            <li>
+                                <a href="/">
+                                    <span class="glyphicons glyphicons-home" aria-hidden="true"></span>&nbsp;Startseite
+                                </a>
+                            </li>
                             {{ NavigationService }}
                             {{ NavigationFavorite }}
                             {#<li class="dropdown">#}
