--- a/Common/Style/NavBar.Correction.css
+++ b/Common/Style/NavBar.Correction.css
@@ -62,6 +62,16 @@
     background: #222222;
 }
 
+.navbar.navbar-mobile ul > li > a {
+    font-size: 12px;
+}
+.navbar.navbar-mobile > ul > li > a span {
+    margin-right: 5px;
+    font-size: 26px;
+    color: #666;
+    height: 26px;
+}
+
 hr.muted {
     margin: 0;
     border-color: #333333;
