--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -36,7 +36,34 @@
 
 {# ------------------------------------------------------------------------------------------------------- NAVIGATION #}
 
-<div data-toggle="collapse" data-target="#nav-toggle" class="hidden-xs">
+<div class="visible-xs">
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-12">
+                <nav class="navbar">
+                    <ul class="nav navbar-nav navbar-left">
+                        <li>
+                            <a href="/">
+                                <span class="glyphicons glyphicons-home" aria-hidden="true"></span>
+                            </a>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                                <span class="glyphicons glyphicons-show-big-thumbnails"></span> Dropdown
+                            </a>
+                            <ul class="dropdown-menu">
+                                {{ NavigationCluster }}
+                            </ul>
+                        </li>
+                        {{ NavigationFavorite }}
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="hidden-xs" data-toggle="collapse" data-target="#nav-toggle">
 
     <div class="container-fluid">
         <div class="row">
@@ -53,15 +80,6 @@
                             </li>
                             {{ NavigationService }}
                             {{ NavigationFavorite }}
-                            {#<li class="dropdown">#}
-                                {#<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"#}
-                                   {#aria-haspopup="true" aria-expanded="false">#}
-                                    {#<span class="glyphicons glyphicons-star" aria-hidden="true"></span>#}
-                                {#</a>#}
-                                {#<ul class="dropdown-menu">#}
-                                {#{{ NavigationFavorite }}#}
-                                {#</ul>#}
-                            {#</li>#}
                             <li>
                                 <a href="#" data-html="true" data-trigger="hover" data-toggle="popover" data-content="<div>4x&nbsp;Q440......................................................................................................................</div><div>2x&nbsp;Artikel</div>" title="Warenkorb">
                                     <span class="glyphicons glyphicons-shopping-cart" aria-hidden="true"></span>&nbsp;6
@@ -167,7 +185,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
-        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10">
+        <div class="col-xs-6 col-sm-12 col-md-12 col-lg-10">
             <nav class="navbar navbar-default navbar-footer small">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-left">
@@ -199,6 +217,12 @@
                             <a><span class="glyphicons glyphicons-group"></span> {{ DebuggerSessionCount }}</a>
                         </li>
                     </ul>
+                </div>
+            </nav>
+        </div>
+        <div class="col-xs-6 col-sm-12 col-md-12 col-lg-10">
+            <nav class="navbar navbar-default navbar-footer small">
+                <div class="container-fluid">
                     <ul class="nav navbar-nav navbar-right">
                         {% for Item in NavigationFooter %}
                             <li>{{ Item }}</li>
