Mobile Navigation Improvement

--- a/Common/Style/Resource.css
+++ b/Common/Style/Resource.css
@@ -67,9 +67,9 @@ body {
 
 /* Prevent Flash ( + Js Mod.. ) */
 
-.FadeIn {
-    visibility: hidden;
-}
+/*.FadeIn {*/
+    /*visibility: hidden;*/
+/*}*/
 .Dynamic-Frontend {
     /*visibility: hidden;*/
     display: none;
