--- a/Common/Style/NavBar.Correction.css
+++ b/Common/Style/NavBar.Correction.css
@@ -5,6 +5,24 @@
     background-position: 15px center;
 }
 
+.navbar-horizontal {
+    text-align: center;
+}
+.navbar-horizontal > li {
+    float: none;
+    text-align: center;
+    display: inline-block;
+}
+
+.navbar-horizontal-left {
+    text-align: left;
+}
+.navbar-horizontal-left > li {
+    float: none;
+    text-align: left;
+    display: inline-block;
+}
+
 .navbar.navbar-service {
 
 }
@@ -62,15 +80,25 @@
     background: #222222;
 }
 
+
+.navbar.navbar-mobile ul > li {
+    min-width: 35px;
+    text-align: center;
+    border-right: 0;
+}
 .navbar.navbar-mobile ul > li > a {
     font-size: 12px;
 }
-.navbar.navbar-mobile > ul > li > a span {
-    margin-right: 5px;
-    font-size: 26px;
+.navbar.navbar-mobile ul > li > a span {
+    margin-bottom: 1px;
+    font-size: 15px;
+    display: block;
+    text-align: center;
     color: #666;
-    height: 26px;
+    height: 17px;
 }
+
+
 
 hr.muted {
     margin: 0;
