--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -10,20 +10,24 @@
     <link hreflang="de">
     {{ ManagerStyle }}
     <script type="text/javascript">
-        var executeScript = function (Callback) {
+        var executeScript = function (Callback)
+        {
             // Save On-Load
             var Event = window.onload;
             // Init On-Load
             if (typeof window.onload != 'function') {
-                window.onload = function () {
-                    executeScript = function (Callback) {
+                window.onload = function ()
+                {
+                    executeScript = function (Callback)
+                    {
                         Callback();
                     };
                 };
                 Event = window.onload;
             }
             // Append On-Load
-            window.onload = function () {
+            window.onload = function ()
+            {
                 if (Event) {
                     Event();
                 }
@@ -40,24 +44,53 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-12">
-                <nav class="navbar">
-                    <ul class="nav navbar-nav navbar-left">
-                        <li>
-                            <a href="/">
-                                <span class="glyphicons glyphicons-home" aria-hidden="true"></span>
-                            </a>
-                        </li>
-                        <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                                <span class="glyphicons glyphicons-show-big-thumbnails"></span> Dropdown
-                            </a>
-                            <ul class="dropdown-menu">
-                                {{ NavigationCluster }}
-                            </ul>
-                        </li>
-                        {{ NavigationFavorite }}
-                    </ul>
+                <nav class="navbar navbar-default">
+                    <div class="container-fluid">
+                        <ul class="nav navbar-nav navbar-horizontal">
+                            <li>
+                                <a href="/">
+                                    <span class="glyphicons glyphicons-home" aria-hidden="true"></span>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Application" data-toggle="collapse">
+                                    <span class="glyphicons glyphicons-show-big-thumbnails"></span> Anwendungen
+                                </a>
+                            </li>
+                            <li>
+                                <a href="#Favorites" data-toggle="collapse">
+                                    <span class="glyphicons glyphicons-star"></span> Favoriten
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
                 </nav>
+                <div id="Application" class="collapse">
+                <nav class="navbar navbar-inverse navbar-mobile">
+                    <div class="container-fluid">
+                        <hr class="muted"/>
+                        <ul class="nav navbar-nav navbar-horizontal">
+                            {{ NavigationCluster }}
+                        </ul>
+                    </div>
+                </nav>
+                {% if( NavigationApplication is not empty ) %}
+                    <nav class="navbar navbar-default navbar-application navbar-mobile">
+                        <hr class="muted"/>
+                        <ul class="nav navbar-nav navbar-horizontal">
+                            {{ NavigationApplication }}
+                        </ul>
+                    </nav>
+                {% endif %}
+                {% if( NavigationModule is not empty ) %}
+                    <nav class="navbar navbar-inverse navbar-module navbar-mobile">
+                        <hr class="muted"/>
+                        <ul class="nav navbar-nav navbar-horizontal">
+                            {{ NavigationModule }}
+                        </ul>
+                    </nav>
+                {% endif %}
+                </div>
             </div>
         </div>
     </div>
@@ -81,7 +114,9 @@
                             {{ NavigationService }}
                             {{ NavigationFavorite }}
                             <li>
-                                <a href="#" data-html="true" data-trigger="hover" data-toggle="popover" data-content="<div>4x&nbsp;Q440......................................................................................................................</div><div>2x&nbsp;Artikel</div>" title="Warenkorb">
+                                <a href="#" data-html="true" data-trigger="hover" data-toggle="popover"
+                                   data-content="<div>4x&nbsp;Q440......................................................................................................................</div><div>2x&nbsp;Artikel</div>"
+                                   title="Warenkorb">
                                     <span class="glyphicons glyphicons-shopping-cart" aria-hidden="true"></span>&nbsp;6
                                 </a>
                             </li>
@@ -131,7 +166,7 @@
 </div>
 
 {% if(BreadcrumbList is not empty) %}
-    <div class="container-fluid">
+    <div class="container-fluid hidden-xs">
         <div class="row">
             <div class="hidden-sm hidden-md col-lg-1"></div>
             <div class="col-sm-12 col-md-12 col-lg-10">
@@ -170,7 +205,7 @@
 
 {# ---------------------------------------------------------------------------------------------------------- CONTENT #}
 
-<div class="container-fluid FadeIn">
+<div class="container-fluid animated fadeIn">
     <div class="row">
         <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10">
@@ -185,10 +220,10 @@
 <div class="container-fluid">
     <div class="row">
         <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
-        <div class="col-xs-6 col-sm-12 col-md-12 col-lg-10">
+        <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10">
             <nav class="navbar navbar-default navbar-footer small">
                 <div class="container-fluid">
-                    <ul class="nav navbar-nav navbar-left">
+                    <ul class="nav navbar-nav navbar-left navbar-horizontal">
                         <li>
                             <a><span class="glyphicons glyphicons-clock"></span> {{ DebuggerRuntime }}</a>
                         </li>
@@ -217,13 +252,7 @@
                             <a><span class="glyphicons glyphicons-group"></span> {{ DebuggerSessionCount }}</a>
                         </li>
                     </ul>
-                </div>
-            </nav>
-        </div>
-        <div class="col-xs-6 col-sm-12 col-md-12 col-lg-10">
-            <nav class="navbar navbar-default navbar-footer small">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav navbar-right">
+                    <ul class="nav navbar-nav navbar-right navbar-horizontal">
                         {% for Item in NavigationFooter %}
                             <li>{{ Item }}</li>
                         {% endfor %}
@@ -265,16 +294,20 @@
     //    _paq.push(['trackPageView']);
     //    _paq.push(['enableLinkTracking']);
 
-    executeScript(function () {
-        Client.Use('ModAlways', function () {
-            jQuery('div.FadeIn').css('visibility','visible').hide().fadeIn('fast');
+    executeScript(function ()
+    {
+        Client.Use('ModAlways', function ()
+        {
+            jQuery('div.FadeIn').css('visibility', 'visible').hide().fadeIn('fast');
             jQuery().ModAlways();
 
             var DataToggleCollapse = jQuery('[data-toggle="collapse"]');
-            DataToggleCollapse.on('mouseover', function () {
+            DataToggleCollapse.on('mouseover', function ()
+            {
                 jQuery(jQuery(this).attr('data-target')).collapse('show');
             });
-            DataToggleCollapse.on('mouseleave', function () {
+            DataToggleCollapse.on('mouseleave', function ()
+            {
                 jQuery(jQuery(this).attr('data-target')).collapse('hide');
             })
         });
