Favicon + Dynamic Style Files

--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -8,6 +8,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="SPHERE-Platform"/>
     <link hreflang="de">
+    <link rel="apple-touch-icon" sizes="180x180" href="/Common/Style/Favicon/apple-touch-icon.png?v=yyxbR6Yxmb">
+    <link rel="icon" type="image/png" href="/Common/Style/Favicon/favicon-32x32.png?v=yyxbR6Yxmb" sizes="32x32">
+    <link rel="icon" type="image/png" href="/Common/Style/Favicon/favicon-16x16.png?v=yyxbR6Yxmb" sizes="16x16">
+    <link rel="manifest" href="/Common/Style/Favicon/manifest.json?v=yyxbR6Yxmb">
+    <link rel="mask-icon" href="/Common/Style/Favicon/safari-pinned-tab.svg?v=yyxbR6Yxmb" color="#000000">
+    <link rel="shortcut icon" href="/Common/Style/Favicon/favicon.ico?v=yyxbR6Yxmb">
+    <meta name="msapplication-config" content="/Common/Style/Favicon/browserconfig.xml?v=yyxbR6Yxmb">
+    <meta name="theme-color" content="#ffffff">
     {{ ManagerStyle }}
     <script type="text/javascript">
         var executeScript = function (Callback)
