--- a/Common/Style/Resource.css
+++ b/Common/Style/Resource.css
@@ -68,11 +68,11 @@ body {
 /* Prevent Flash ( + Js Mod.. ) */
 
 /*.FadeIn {*/
-    /*visibility: hidden;*/
+    /* visibility: hidden; */
 /*}*/
 .Dynamic-Frontend {
-    /*visibility: hidden;*/
-    display: none;
+    /* visibility: hidden; */
+    /* display: none; */
 }
 
 /* Scrollbar */
