--- a/Common/Window/Display.twig
+++ b/Common/Window/Display.twig
@@ -213,7 +213,7 @@
 
 {# ---------------------------------------------------------------------------------------------------------- CONTENT #}
 
-<div class="container-fluid animated fadeIn">
+<div class="container-fluid">
     <div class="row">
         <div class="hidden-xs hidden-sm hidden-md col-lg-1"></div>
         <div class="col-xs-12 col-sm-12 col-md-12 col-lg-10">
