--- a/Common/Frontend/Link/Repository/External.twig
+++ b/Common/Frontend/Link/Repository/External.twig
@@ -5,17 +5,20 @@
     //noinspection JSUnresolvedFunction
     executeScript(function()
     {
-        {% if RedirectTimeout is not empty %}
         Client.Use("ModAlways", function()
         {
-            jQuery("a#{{ Hash }}").on("click", function()
+            $('a#{{ Hash }}[data-toggle="popover"]').popover({
+                placement: 'auto top'
+            });
+            {% if RedirectTimeout is not empty %}
+            jQuery("a#{{ Hash }}").on("click", function ()
             {
                 $("a#{{ Hash }}").html(
                     '<span class="loading-indicator-animate"></span> Bitte warten'
                 );
                 setTimeout("location.href='{{ UrlBase }}{{ RedirectRoute }}'", {{ RedirectTimeout }}000);
             });
+            {% endif %}
         });
-        {% endif %}
     });
 </script>
