--- a/Common/Frontend/Form/Structure/Form.twig
+++ b/Common/Frontend/Form/Structure/Form.twig
@@ -64,10 +64,12 @@
                 {% if EnableSaveDraft is not empty %},saveDraftData: {{ EnableSaveDraft }}{% endif %}
             });
             {% if( AjaxEventSubmit is not empty ) %}
-            jQuery("form#{{ Hash }}").on('submit',function(Event){
-                Event.preventDefault();
-                {{ AjaxEventSubmit }}
-            })
+            Client.Use('ModAjax', function() {
+                jQuery("form#{{ Hash }}").on('submit', function (Event) {
+                    Event.preventDefault();
+                    {{ AjaxEventSubmit }}
+                });
+            });
             {% endif %}
         });
     });
