--- a/Common/Frontend/Form/Repository/Field/SelectBox.Select2.twig
+++ b/Common/Frontend/Form/Repository/Field/SelectBox.Select2.twig
@@ -39,6 +39,10 @@
                 guiSelect.next().find('span.select2-selection__rendered').css('color','silver');
             }
             guiSelect.next().find('span.select2-selection__arrow b').css('border-top-color','silver');
+
+            guiSelect.data().select2.on("focus", function () {
+                guiSelect.select2("open");
+            });
         });
     });
 </script>
